@@ -22,9 +22,9 @@ i	SETA i + 2
 
 	|
 
-	DCD 0<<24, 1<<24, 2<<24, 3<<24, 4<<24, 5<<24, 6<<24, 7<<24, 8<<24, 9<<24, 10<<24, 11<<24, 12<<24, 13<<24, 14<<24, 15<<24, 2<<24, 3<<24
-	DCD 0<<24, 1<<24, 2<<24, 3<<24, 4<<24, 5<<24, 6<<24, 7<<24, 8<<24, 9<<24, 10<<24, 11<<24, 12<<24, 13<<24, 14<<24, 15<<24, 2<<24, 3<<24
-	DCD 14<<24
+	DCD 0<<28, 1<<28, 2<<28, 3<<28, 4<<28, 5<<28, 6<<28, 7<<28, 8<<28, 9<<28, 10<<28, 11<<28, 12<<28, 13<<28, 14<<28, 15<<28, 2<<28, 3<<28
+	DCD 0<<28, 1<<28, 2<<28, 3<<28, 4<<28, 5<<28, 6<<28, 7<<28, 8<<28, 9<<28, 10<<28, 11<<28, 12<<28, 13<<28, 14<<28, 15<<28, 2<<28, 3<<28
+	DCD 14<<28
 
 	]
 
