@@ -1,3 +1,8 @@
+Mon Oct  7 21:31:48 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/eval.c (Eval_Unop): Fix wrong shift for eOp_CCEnc case.
+	* unittests/compare/operator_cc_encoding.s: Fix CC_ENCODING results.
+
 Sun Aug  4 14:25:09 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* README: Relocation work is done.
